--- a/docs/layout/spacing/index.html
+++ b/docs/layout/spacing/index.html
@@ -45,16 +45,16 @@
     <main class="">
       <article class="bg-near-white bt b--black-10 pa3 ph5-ns">
         <h4 class="f4 mv0 fw6 dib mr4">tachyons-spacing</h4>
-        <span class="f4 b dib pl0 ml0 mr4">v5.0.4</span>
-        <span class="f4 b dib pl0 ml0 mr4">1.7 KB</span>
+        <span class="f4 b dib pl0 ml0 mr4">v5.0.8</span>
+        <span class="f4 b dib pl0 ml0 mr4">1.71 KB</span>
         <div>
           <dl class="dib mr4 mt0">
             <dt class="f6 db">Declarations </dt>
-            <dd class="db pl0 ml0 f4 f2-ns b">572</dd>
+            <dd class="db pl0 ml0 f4 f2-ns b">576</dd>
           </dl>
           <dl class="dib mr4">
             <dt class="f6 db pr2">Selectors </dt>
-            <dd class="db pl0 ml0 f4 f2-ns b">446</dd>
+            <dd class="db pl0 ml0 f4 f2-ns b">448</dd>
           </dl>
           <dl class="dib mr4">
             <dt class="f6 db pr2">Max. Specificity Score </dt>
@@ -62,7 +62,7 @@
           </dl>
           <dl class="dib mr4">
             <dt class="f6 db pr2">Size of Avg. Rule </dt>
-            <dd class="db pl0 ml0 f4 f2-ns b">1.2825112107623318</dd>
+            <dd class="db pl0 ml0 f4 f2-ns b">1.2857142857142858</dd>
           </dl>
         </div>
         <p class="measure f4 f3-ns lh-copy">
@@ -1208,7 +1208,7 @@ Tachyons features a spacing scale based on powers of two that starts at .25rem (
         <a class="f5 fw4 dim link blue db pv1" href="/docs/layout/box-sizing" title="Box Sizing">Box Sizing</a>
         <a class="f5 fw4 dim link blue db pv1" href="/docs/layout/spacing" title="Spacing">Spacing</a>
         <a class="f5 fw4 dim link blue db pv1" href="/docs/layout/floats" title="Floats">Floats</a>
-        <a class="f5 fw4 dim link blue db pv1" href="/docs/layout/clearfix" title="Clears">Clearfix</a>
+        <a class="f5 fw4 dim link blue db pv1" href="/docs/layout/clears" title="Clears">Clears</a>
         <a class="f5 fw4 dim link blue db pv1" href="/docs/layout/display" title="Display">Display</a>
         <a class="f5 fw4 dim link blue db pv1" href="/docs/layout/widths" title="Widths">Widths</a>
         <a class="f5 fw4 dim link blue db pv1" href="/docs/layout/max-widths" title="Max Widths">Max Widths</a>
