--- a/src/templates/docs/clears/index.html
+++ b/src/templates/docs/clears/index.html
@@ -74,7 +74,7 @@
       </div>
       <section class="bg-near-white black-70 pt4 pb5">
         <header class="ph3 ph5-ns pt4">
-          <kbd class="yellow">src/_clearfix.css</kbd>
+          <kbd class="yellow">src/_clears.css</kbd>
         </header>
 <pre class="ph3 ph5-ns">
 <code class="code" style="font-size: .75rem;">
