--- a/docs/layout/clears/index.html
+++ b/docs/layout/clears/index.html
@@ -74,6 +74,7 @@
       <div class="ph3 ph5-ns pt4 pb5">
         <h2 class="f3 b">Examples</h2>
         <h3 class="f4">Cleared Floats</h3>
+        <code class="f5 gray">.cf</code>
         <p class="measure lh-copy">
           This example shows two floated elements wrapped in an element with a 4px solid red border.
           In the top version where the floats are cleared, the red element wraps around the elements.
@@ -84,9 +85,19 @@
           <div class="fl w-50 pv4" style="background: rgba(0,20,120,.6)"></div>
           <div class="fl w-50 pv4" style="background: rgba(0,50,80,.6)"></div>
         </div>
-        <h3 class="f4">UnCleared Floats</h3>
+        <h3 class="f4 mt4">UnCleared Floats</h3>
         <div style="outline: 8px solid red;">
           <div class="fl w-50 pv4" style="background: rgba(0,20,120,.6)"></div>
+          <div class="fl w-50 pv4" style="background: rgba(0,50,80,.6)"></div>
+        </div>
+        <h3 class="f4 mt5">Cleared Left Floats</h3>
+        <div class="cf" style="outline: 8px solid red;">
+          <div class="cl fl w-50 pv4" style="background: rgba(0,20,120,.6)"></div>
+          <div class="fl w-50 pv4" style="background: rgba(0,50,80,.6)"></div>
+        </div>
+        <h3 class="f4 mt5">Cleared Right Floats</h3>
+        <div class="cf" style="outline: 8px solid red;">
+          <div class="cr fl w-50 pv4" style="background: rgba(0,20,120,.6)"></div>
           <div class="fl w-50 pv4" style="background: rgba(0,50,80,.6)"></div>
         </div>
 
